--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore DB files
+/db/development.sqlite3
+/db/test.sqlite3
+
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
